linstaller (2.10.0-1) pulse; urgency=low

  * Initial upload to pulse.

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Sun, 25 Dec 2011 11:38:30 +0100

linstaller (2.0.0-1) emily; urgency=low

  * Final 2.0.0 release.

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Sat, 24 Dec 2011 10:22:48 +0100

linstaller (2.0.0~pre3.1-1) emily; urgency=low

  * Rebuild which adds mount_nolive.sh.

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Sun, 18 Dec 2011 12:11:09 +0100

linstaller (2.0.0~pre3-1) emily; urgency=low

  * modules/unsquash: fixed the crash on window resizing.
  * modules/partdisks: inst: do not raise an exception when umount
    fails in revert.
  * mount_nolive.sh: added.
  * setup.py and debian/: ship the clean module and mount_nolive.sh.

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Sun, 18 Dec 2011 11:49:45 +0100

linstaller (2.0.0~pre2-1) emily; urgency=low

  * linstaller: added ability to preseed from command-line;
  * core/config: support initial (file-less) configurations;
  * modules/widget_test: splitted tests; added sequence, progressbar_val,
    progressbar_sleep seeds;
  * core/module: support default items in cache().
  * modules/update: specify default when calling cache().
  * core/config: return booleans instead of strings if True, False or None.
    (not case-sensitive).
  * modules/*: some logic changes due to the above modification.
    swap (partdisks) and root (userhost) requires None to disable.
  * config/semplice: changed root = False to root = None, due to the change
    above.
  * modules/: added new clean module; cleans /etc/linstaller if custom
    configurations are manually shipped during an ipothetical remaster.
  * config/semplice-base: added the clean frontend to modules.

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Sun, 18 Dec 2011 10:58:42 +0100

linstaller (2.0.0~pre1-1) emily; urgency=low

  * core/cli_frontend: new progressbar wrapper (class __ProgressBar).
