@@ -1,0 +1,9 @@
+# -*- coding: utf-8 -*-
+# linstaller welcome module frontend - (C) 2011 Eugenio "g7" Paolantonio and the Semplice Team.
+# All rights reserved. Work released under the GNU GPL license, version 3 or later.
+#
+# This is a module of linstaller, should not be executed as a standalone application.
+
+import linstaller.core.module as module
+
+Module = module.Module
